--- a/Practica1.ipynb
+++ b/Practica1.ipynb
@@ -2149,6 +2149,26 @@
             "\u001b[1;32md:\\AleBovet\\Repositorios\\MachineLearningPublic\\Practica1.ipynb Cell 72\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/AleBovet/Repositorios/MachineLearningPublic/Practica1.ipynb#Y115sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mpip\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minstall -q gradio\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/AleBovet/Repositorios/MachineLearningPublic/Practica1.ipynb#Y115sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgradio\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgr\u001b[39;00m \n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/AleBovet/Repositorios/MachineLearningPublic/Practica1.ipynb#Y115sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n",
             "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'gradio'"
           ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  WARNING: The script tqdm.exe is installed in 'c:\\Users\\alej1\\.conda\\envs\\ETL\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+            "  WARNING: The script normalizer.exe is installed in 'c:\\Users\\alej1\\.conda\\envs\\ETL\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+            "  WARNING: The script uvicorn.exe is installed in 'c:\\Users\\alej1\\.conda\\envs\\ETL\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+            "  WARNING: The script huggingface-cli.exe is installed in 'c:\\Users\\alej1\\.conda\\envs\\ETL\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+            "  WARNING: The script jsonschema.exe is installed in 'c:\\Users\\alej1\\.conda\\envs\\ETL\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+            "  WARNING: The script httpx.exe is installed in 'c:\\Users\\alej1\\.conda\\envs\\ETL\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+            "  WARNING: The scripts gradio.exe and upload_theme.exe are installed in 'c:\\Users\\alej1\\.conda\\envs\\ETL\\Scripts' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
+          ]
         }
       ],
       "source": [
